# brichip

./: .gitignore  dsclean.sh
tags/0.1/: configure
tags/0.1/src/: Makefile.am  chip8.c  opcode.c
tags/1.1/src/: SDL_win32_main.c
trunk/0.1/: configure.ac
trunk/0.1/src/: Makefile.in  chip8.h
trunk/1.1/: Makefile.MacOSX  Makefile.mingw32.bat  README
trunk/1.1/src/: chip8.h
trunk/1.2/: Makefile  Makefile.MacOSX  Makefile.in  TODO  configure  configure.ac  createdmg.sh
trunk/1.2/autom4te.cache/: output.0  output.1  traces.0  traces.1
trunk/1.2/include/: SDLm.h
trunk/1.2/lib/: libSDL-1.2.0.dylib
trunk/1.2/src/: SDLm.c  SDLm.h  chip8.c  chip8.h  config.h.in
trunk/1.2/src/macosx/: Info.plist.in  SDLMain.h  SDLMain.m
trunk/1.2/src/macosx/SDLMain.nib/: classes.nib  info.nib  keyedobjects.nib
trunk/1.2/src/win/: SDL_win32_main.c
